[tool.poetry]
name = "goit-ds-hw-01"
version = "0.1.0"
description = ""
authors = ["Zoresław Dmytryszyn <zoreslav.dmytryshyn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
